[package]
name = "polars-json"
version = "0.1.0"
edition = "2024"

[lib]
name = "polars_json"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module", "abi3-py39"] }
pyo3-polars = { version = "0.25.0", features = [
    "derive",
    "dtype-struct",
    "dtype-array",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
polars = { version = "0.52.0", default-features = false }
polars-arrow = { version = "0.52.0", default-features = false }
